Fix small design issue on domains

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/domains/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/domains/style.scss
@@ -85,4 +85,13 @@
 	.is-borderless {
 		border: 0;
 	}
+
+	.domain-search-results__domain-not-available {
+		.domain-search-results__domain-available-notice {
+			box-shadow: none;
+			border: 0;
+			margin-bottom: 24px;
+			padding: 0;
+		}
+	}
 }
