--- a/client/landing/stepper/declarative-flow/internals/steps-repository/components/accent-color-control/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/components/accent-color-control/style.scss
@@ -17,6 +17,7 @@
 		&.select-dropdown:not(.is-open) .select-dropdown__container:focus,
 		&.select-dropdown.is-open .select-dropdown__container {
 			.select-dropdown__header {
+				border-radius: 4px;
 				box-shadow: inset 0 0 0 2px #e2eaf1;
 				border-color: var(--color-neutral-10);
 			}
@@ -36,6 +37,15 @@
 
 	.select-dropdown__container {
 		width: 100%;
+
+		.select-dropdown__header {
+			border-radius: 4px;
+			font-weight: 400;
+		}
+
+		.select-dropdown__options {
+			border-radius: 0 0 4px 4px;
+		}
 
 		.select-dropdown__header .select-dropdown__header-text > svg,
 		.select-dropdown__options .select-dropdown__item-text > svg {
