fix hover style for disabled pending tasks

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/launchpad/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/launchpad/style.scss
@@ -329,6 +329,13 @@
 	}
 }
 
+// pending disabled tasks
+.launchpad__task.pending.disabled {
+	.launchpad__checklist-item-text {
+		color: inherit;
+	}
+}
+
 .launchpad__checklist-item-chevron {
 	display: flex;
 	line-height: 20px;
