Custom Domain Dialog: Wrap the install plugin button content when its too long

--- a/client/my-sites/plugins/plugin-custom-domain-dialog/style.scss
+++ b/client/my-sites/plugins/plugin-custom-domain-dialog/style.scss
@@ -20,3 +20,10 @@
 		margin: 0;
 	}
 }
+
+.plugin-custom-domain-dialog__install_plugin {
+	max-width: 200px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
