--- a/packages/components/src/horizontal-bar-list/stories/stories.scss
+++ b/packages/components/src/horizontal-bar-list/stories/stories.scss
@@ -1,4 +1,4 @@
-@import "../styles/typography.scss";
+@import "../../styles/typography.scss";
 
 .theme-default {
 	--color-sidebar-background: #23282d;
@@ -8,4 +8,8 @@
 
 body {
 	font-family: $a8c-font-family-sans;
+}
+
+a {
+	text-decoration: none;
 }
