--- a/client/landing/stepper/declarative-flow/internals/steps-repository/videomaker-setup/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/videomaker-setup/styles.scss
@@ -13,11 +13,18 @@ $font-family: "SF Pro Text", $sans;
 		align-items: center;
 	}
 
+	.step-container {
+		max-width: initial;
+	}
+
 	.videomaker-setup__theme-picker {
 		display: flex;
 		flex-direction: column;
 		margin-block-end: 36px;
 		align-items: center;
+		flex-wrap: wrap;
+		justify-content: center;
+		gap: 45px;
 
 		.videomaker-setup__light-button img {
 			background-color: #fff;
@@ -29,34 +36,31 @@ $font-family: "SF Pro Text", $sans;
 
 		button {
 			background-color: $videopress-theme-border-color;
-			border: 10px solid $videopress-theme-border-color;
-			border-radius: 4px;
+			outline: 10px solid $videopress-theme-border-color;
+			/* stylelint-disable-next-line scales/radii */
+			border-radius: 8px;
 			padding: 0;
 			margin: 0;
 			transition: all 0.2s ease-in-out;
 			transform: scale(1);
 			z-index: 0;
 			cursor: pointer;
-			max-width: 76%;
+			max-width: calc(min(800px, 80%));
 
 			img {
 				display: block;
-				width: 100%;
 				height: auto;
 				border-radius: 4px;
 				flex-grow: 1;
 				object-fit: cover;
-			}
-
-			&:first-of-type {
-				margin-bottom: 30px;
+				width: 100%;
 			}
 
 			&:hover {
 				transform: scale(1.05);
 				z-index: 1;
 				background-color: $videopress-theme-yellow;
-				border: 8px solid $videopress-theme-yellow;
+				outline: 8px solid $videopress-theme-yellow;
 			}
 		}
 
@@ -65,22 +69,14 @@ $font-family: "SF Pro Text", $sans;
 			padding: 0 16px;
 			min-height: 312px;
 
-			button {
-
-				&:first-of-type {
-					margin-bottom: 0;
-					margin-inline-end: 30px;
-				}
-			}
-
 			img {
-				max-width: 400px;
+				max-width: 100%;
 			}
 		}
 
 		@include break-large {
 			img {
-				max-width: 500px;
+				max-width: 100%;
 			}
 		}
 	}
