Header margin adjustments

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/choose-a-domain/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/choose-a-domain/style.scss
@@ -16,6 +16,7 @@ $videopress-mobile-layout-width: 1200px;
 
 		padding: 20px;
 		margin-bottom: 0;
+		margin-top: 128px;
 	}
 
 	.register-domain-step__search {
