Powered by VideoPress always at bottom.
This solution is flexbox based, the main ingredient being
that .step-container is a flexbox (column) and that content
flex-grows to fill all the space.

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/intro/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/intro/styles.scss
@@ -114,6 +114,11 @@
 				margin: 5px 0 60px;
 			}
 		}
+		.step-container__videopress-powered {
+			position: absolute;
+			bottom: 0;
+			left: 0;
+		}
 	}
 
 	.intro__content {
