Display custom color icon 4px up from the middle so it appears to be vertically center alligned

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/components/accent-color-control/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/components/accent-color-control/style.scss
@@ -45,6 +45,10 @@
 
 		.select-dropdown__options {
 			border-radius: 0 0 4px 4px;
+
+			.custom_color_icon {
+				margin-bottom: 4px;
+			}
 		}
 
 		.select-dropdown__header .select-dropdown__header-text > svg,
