--- a/client/landing/stepper/declarative-flow/internals/steps-repository/launchpad/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/launchpad/style.scss
@@ -209,6 +209,28 @@
 	@include break-large {
 		margin: 20px auto;
 	}
+
+	&-primary-button {
+		width: 100%;
+		font-weight: 500;
+		padding: 11px;
+		margin-top: 12px;
+		background-color: var(--color-primary);
+		border-color: var(--color-primary);
+		color: var(--color-text-inverted);
+
+		&:hover:not([disabled]) {
+			background-color: var(--color-primary-60);
+			border-color: var(--color-primary-60);
+			color: var(--color-text-inverted);
+		}
+
+		&[disabled] {
+			background-color: var(--color-primary-10);
+			border-color: var(--color-primary-10);
+			color: var(--color-text-inverted);
+		}
+	}
 }
 
 .launchpad__checklist-item {
@@ -261,6 +283,15 @@
 	line-height: 20px;
 	text-align: left;
 	font-weight: 600;
+}
+
+.launchpad__task:nth-last-child(2) {
+	// remove bottom border for last checklist item before the primary button
+	.launchpad__checklist-item,
+	.launchpad__checklist-item:hover,
+	.launchpad__checklist-item:focus {
+		border-bottom: none;
+	}
 }
 
 // completed tasks
