--- a/client/components/chart/style.scss
+++ b/client/components/chart/style.scss
@@ -372,6 +372,7 @@ $y-axis-padding: 0 20px 0 10px;
 		}
 	}
 
+	// @TODO Integrate styles with Stats
 	&.is-streak {
 		.popover__inner {
 			width: 160px;
@@ -400,6 +401,7 @@ $y-axis-padding: 0 20px 0 10px;
 }
 
 .chart__tooltip .module-content-list-item {
+	// @TODO Integrate styles with Stats
 	&.is-date-label {
 		font-size: $font-body-extra-small;
 		margin-bottom: 2px;
@@ -409,6 +411,7 @@ $y-axis-padding: 0 20px 0 10px;
 		padding-bottom: 2px;
 	}
 
+	// @TODO Integrate styles with Stats
 	&.is-published-item {
 		height: 19px;
 
