--- a/client/my-sites/stats/style.scss
+++ b/client/my-sites/stats/style.scss
@@ -31,12 +31,6 @@
 	margin-left: 4px;
 }
 
-.is-section-stats .followers-count .button {
-	@include breakpoint-deprecated( "<480px" ) {
-		display: none;
-	}
-}
-
 .stats-navigation__control {
 	margin-right: 16px;
 
@@ -163,7 +157,6 @@
 	}
 }
 
-
 .stats__parsely-banner {
 	display: flex;
 	font-size: $font-body-small;
@@ -211,5 +204,104 @@
 
 	&::after {
 		display: none;
+	}
+}
+
+// Stats section scoped styles
+.is-section-stats {
+	.followers-count .button {
+		@include breakpoint-deprecated( "<480px" ) {
+			display: none;
+		}
+	}
+
+	.tooltip.popover.chart__tooltip {
+		// Overwrite Tooltip styles
+		&.is-bottom-right,
+		&.is-bottom-left,
+		&.is-bottom {
+			.popover__arrow {
+				border-bottom-color: var(--color-neutral-100);
+			}
+		}
+
+		&.is-top,
+		&.is-top-left,
+		&.is-top-right {
+			.popover__arrow {
+				border-top-color: var(--color-neutral-100);
+			}
+		}
+
+		&.is-left {
+			.popover__arrow {
+				border-left-color: var(--color-neutral-100);
+			}
+		}
+
+		&.is-right {
+			.popover__arrow {
+				border-right-color: var(--color-neutral-100);
+			}
+		}
+
+		// Overwrite Tooltip styles
+		.popover__inner {
+			color: var(--color-text-inverted);
+			background: var(--color-neutral-100);
+			font-size: $font-body-small;
+			padding: 16px 24px;
+
+			// Overwrite Chart styles
+			ul {
+				li {
+					font-size: $font-body-small;
+					font-weight: 500;
+					line-height: 20px;
+					letter-spacing: -0.24px;
+					margin-bottom: 10px;
+
+					&:last-child {
+						margin-bottom: 0;
+					}
+
+					.value {
+						color: inherit;
+					}
+
+					.gridicon {
+						margin-right: 12px;
+					}
+				}
+			}
+		}
+
+		// Overwrite Chart styles
+		.module-content-list-item {
+			&.is-date-label {
+				font-weight: 600;
+				border-bottom: 0;
+			}
+
+			&.is-published {
+				margin-bottom: 4px;
+			}
+
+			&.is-published-item {
+				height: auto;
+				font-size: $font-body-extra-small;
+				margin-bottom: 0;
+				padding-left: 30px;
+				text-decoration: underline;
+
+				.label {
+					height: auto;
+					line-height: 20px;
+					color: inherit;
+					letter-spacing: inherit;
+					word-break: break-word;
+				}
+			}
+		}
 	}
 }
