--- a/packages/components/src/horizontal-bar-list/style.scss
+++ b/packages/components/src/horizontal-bar-list/style.scss
@@ -2,22 +2,12 @@
 // Horizontal bar list
 // ==========================================================================
 @import "../styles/typography.scss";
-
-$padding-outside: 24px;
-$space-between-rows: 3px;
-$row-height: 36px;
-$row-font-size: 14px;
-$row-line-height: 20px;
-$bar-left-spacing: 10px;
-$value-column-width: 50px;
-$border-radius: 4px;
-$item-transition: 0.1s ease-out;
-$item-indicator-width: 4px;
+@import "./stats-variables.scss";
 
 .horizontal-bar-list {
 	list-style: none;
 	margin: 0;
-	padding: $padding-outside 0;
+	padding: 0;
 	font-size: $row-font-size;
 	font-weight: 500;
 	line-height: $row-line-height;
