Restyle links on Task Card so contrast is ok with all Calypso themes.

--- a/client/my-sites/customer-home/cards/tasks/style.scss
+++ b/client/my-sites/customer-home/cards/tasks/style.scss
@@ -127,7 +127,8 @@
 		}
 
 		.task__description a {
-			color: var(--color-accent);
+			color: var(--color-neutral-0);
+			font-weight: bold;
 		}
 		.task__skip:hover {
 			color: var(--color-neutral-20);
