--- a/client/components/marketing-survey/cancel-purchase-form/style.scss
+++ b/client/components/marketing-survey/cancel-purchase-form/style.scss
@@ -16,22 +16,13 @@
 	vertical-align: middle;
 }
 
-.cancel-purchase-form__step {
-	position: absolute;
-	right: 1.5rem;
-	display: none;
-
-	@include break-small {
-		display: inline-block;
-	}
-}
-
 .cancel-purchase-form__feedback,
 .cancel-purchase-form__atomic-revert {
 	max-width: 730px;
-	margin: 0 auto 3rem;
+	margin: 0 auto 2rem;
 }
 
+.cancel-purchase-form__upsell,
 .cancel-purchase-form__feedback-questions {
 	max-width: 540px;
 	margin: 0 auto;
@@ -136,30 +127,6 @@
 	display: inline-block;
 	position: relative;
 
-	@include break-small {
-		// Line decorations.
-		&::before,
-		&::after {
-			content: "";
-			display: block;
-			width: 730px;
-			height: 0;
-			border-top: 1px solid var(--studio-gray-5);
-			top: 50%;
-			position: absolute;
-		}
-
-		&::before {
-			right: 100%;
-			margin-right: 1rem;
-		}
-
-		&::after {
-			left: 100%;
-			margin-left: 1rem;
-		}
-	}
-
 	.components-button {
 		margin-right: 1rem;
 		padding: 0.625rem 1rem;
@@ -172,39 +139,13 @@
 	}
 }
 
-.cancel-purchase-form__actions .precancellation-chat-button__main-button {
-	font-size: 0;
-	float: none;
-	right: 1rem;
-	color: var(--studio-gray-50);
-	display: inline-block;
-	position: absolute;
-
-	@include break-small {
-		margin: 1rem auto;
-		font-size: inherit;
-		position: relative;
-		display: block;
-	}
-
-	.material-icon {
-		fill: var(--studio-gray-50);
-		width: 1.5rem;
-		height: 1.5rem;
-
-		@include break-small {
-			width: 1rem;
-			height: 1rem;
-		}
-	}
-}
-
 .cancel-purchase-form__upsell {
 	padding: 1.5rem;
 	background-color: var(--studio-green-0);
 	border: 1px solid var(--studio-green-5);
 	border-radius: 5px; /* stylelint-disable-line scales/radii */
 	display: flex;
+	margin-bottom: 2rem;
 
 	.cancel-purchase-form__upsell-image {
 		display: none;
@@ -256,4 +197,12 @@
 		// Hide buttons rendered by old components, so we can still re-use them for rendering rest of content.
 		display: none;
 	}
+}
+
+.blank-canvas.cancel-purchase-form .blank-canvas__back {
+	z-index: 1;
+}
+
+.blank-canvas.cancel-purchase-form .blank-canvas__header-title {
+	z-index: 0;
 }
