--- a/client/components/marketing-survey/cancel-purchase-form/precancellation-chat-button/style.scss
+++ b/client/components/marketing-survey/cancel-purchase-form/precancellation-chat-button/style.scss
@@ -1,36 +1,14 @@
-@import "@wordpress/base-styles/breakpoints";
-@import "@wordpress/base-styles/mixins";
-
 .precancellation-chat-button__main-button {
-	display: none;
-	position: absolute;
-	right: 1rem;
-	font-size: inherit;
+	display: block;
 
-	&.at-bottom {
-		display: inline-block;
-		font-size: 0;
-	}
-
-	@include break-small {
-		display: inline-block;
-		transform: translateY(-4px);
-
-		&.at-bottom {
-			display: none;
-		}
+	@include breakpoint-deprecated( ">480px" ) {
+		float: left;
 	}
 
 	.material-icon {
-		fill: var(--studio-gray-50);
-		width: 1.5rem;
-		height: 1.5rem;
+		width: 1rem;
+		height: 1rem;
 		margin-right: 0.5rem;
 		vertical-align: middle;
-
-		@include break-small {
-			width: 1rem;
-			height: 1rem;
-		}
 	}
 }
