--- a/client/layout/universal-navbar-header/nav-style.scss
+++ b/client/layout/universal-navbar-header/nav-style.scss
@@ -12,9 +12,15 @@
 .plugins-listing {
 	.masterbar {
 		height: 56px;
+		position: relative;
 	}
 	.fixed-navigation-header__header {
 		top: 56px;
+		position: absolute;
+		top: 0;
+	}
+	.search-box-header.fixed-top .search-box-header__search {
+		position: relative;
 	}
 }
 
@@ -163,6 +169,9 @@ $x-nav-height: $x-nav-padding-top + $x-nav-item-height + $x-nav-item-padding-x-w
 
 	&:hover > .x-dropdown-content {
 		opacity: 1;
+		pointer-events: all;
+		transform: translateY(0) scale(1);
+		transition: all 450ms cubic-bezier(0.5, 1, 0.89, 1);
 	}
 }
 
@@ -202,7 +211,6 @@ button.x-nav-link.x-link {
 		border: 1px solid currentcolor;
 		border-radius: var(--lp-control-border-radius, 0.25em);
 		opacity: 0.35;
-		pointer-events: none;
 	}
 
 	&:not(:active):focus::before {
@@ -313,7 +321,6 @@ $x-dropdown-item-line-height: 19px;
 	width: $x-dropdown-background-width + 2 * $x-dropdown-shadow-blur;
 	opacity: 0;
 	transform-origin: 50% 0;
-	pointer-events: none;
 }
 
 /*
@@ -341,7 +348,6 @@ $x-dropdown-item-line-height: 19px;
 	top: -1 * $x-dropdown-shadow-blur;
 	height: 2 * $x-dropdown-shadow-blur;
 	padding-top: $x-dropdown-shadow-blur + $x-dropdown-background-offset-y;
-	pointer-events: none;
 }
 
 .x-dropdown-middle { /* 2 */
@@ -392,31 +398,26 @@ $x-dropdown-item-line-height: 19px;
 
 /*
  * Dropdown content
- *
- * 1. The contents elements are stacked on top of each other.
- * 2. Their visibility is determined by the ARIA attribute.
- * 3. Increase the specificity due to side effects on older landing pages.
- * 4. The equivalent of 13px/18px without Dynamic Type on.
- * 5. Due to the way Dynamic Type is defined in CSS, some of the properties
- *    have to be overriden by repetition.
  */
 
 .x-dropdown-content {
-	z-index: 100;
+	z-index: 901;
 	position: absolute; /* 1 */
-	top: 65px; /* 1 */
+	top: 55px; /* 1 */
 	padding: (15px + $x-dropdown-background-offset-y) 0 18px;
 	opacity: 0;
-	pointer-events: none;
 	left: -60px;
 	background: #fff;
 	border-radius: 9px;
 	box-shadow: 0 9px 48px rgb(16 21 23 / 25%);
 	width: 210px;
+	pointer-events: none;
+	transition: all 150ms cubic-bezier(0.1, 0.6, 0.2, 1);
+	transform: translateY(-6px) scale(0.9);
+	transform-origin: 29px 0;
 
 	&[aria-hidden="false"] { /* 2 */
 		z-index: 1;
-		pointer-events: auto;
 	}
 
 	ul {
@@ -430,9 +431,10 @@ $x-dropdown-item-line-height: 19px;
 		height: 36px;
 		left: 90px;
 		position: absolute;
-		top: -8px;
+		top: -2px;
 		transform: rotate(45deg);
 		width: 36px;
+		z-index: -1;
 	}
 }
 
@@ -462,14 +464,6 @@ $x-dropdown-item-line-height: 19px;
 	&:active {
 		background: $x-color-link-background-active;
 		color: $x-color-link-active;
-	}
-
-	.js-dynamic-type-on & {
-		/* stylelint-disable-next-line max-line-length */
-		/* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
-		font: -apple-system-short-footnote; /* 4 */
-		font-family: inherit; /* 5 */
-		font-weight: $lp-font-weight-bold; /* 5 */
 	}
 }
 
@@ -529,15 +523,10 @@ $x-menu-heading-line-height-wide: $x-menu-heading-font-size-wide + 7px; /* 1 */
 	bottom: 0;
 	left: 0;
 	display: none;
-	pointer-events: none;
 }
 
 .x-menu__active {
 	display: block;
-}
-
-.x-menu__open {
-	pointer-events: auto;
 }
 
 .x-menu-overlay {
@@ -561,7 +550,7 @@ $x-menu-heading-line-height-wide: $x-menu-heading-font-size-wide + 7px; /* 1 */
 }
 
 .x-menu-content {
-	position: absolute;
+	position: fixed;
 	top: $x-menu-outer-offset;
 	right: $x-menu-outer-offset;
 	left: $x-menu-outer-offset;
@@ -572,7 +561,6 @@ $x-menu-heading-line-height-wide: $x-menu-heading-font-size-wide + 7px; /* 1 */
 	transform: scale(0);
 	transform-origin: 100% 0;
 	transform-origin: calc(100% - 19px) 15px; /* 2 */
-	pointer-events: none;
 
 	@media ( min-width: $x-nav-breakpoint-small ) {
 		left: auto;
@@ -583,10 +571,6 @@ $x-menu-heading-line-height-wide: $x-menu-heading-font-size-wide + 7px; /* 1 */
 		width: $x-menu-width-wide;
 		font-size: $x-menu-item-font-size-wide;
 		line-height: $x-menu-item-line-height-wide;
-
-		.js-dynamic-type-on & {
-			width: $x-menu-width-narrow;
-		}
 	}
 
 	.x-menu__active & {
@@ -597,7 +581,6 @@ $x-menu-heading-line-height-wide: $x-menu-heading-font-size-wide + 7px; /* 1 */
 		transform: scale(1);
 		transition-duration: 0.35s;
 		transition-timing-function: cubic-bezier(0.1, 0.6, 0.2, 1);
-		pointer-events: auto;
 		z-index: 850;
 	}
 }
@@ -673,10 +656,6 @@ $x-menu-heading-line-height-wide: $x-menu-heading-font-size-wide + 7px; /* 1 */
 	:not(.x-menu-list-title) ~ & {
 		margin-top: -3px;
 	}
-
-	.js-dynamic-type-on & {
-		display: block;
-	}
 }
 
 .x-menu-link.x-menu-link { /* 3 */
@@ -686,14 +665,6 @@ $x-menu-heading-line-height-wide: $x-menu-heading-font-size-wide + 7px; /* 1 */
 	font-size: inherit;
 	font-weight: $lp-font-weight-bold;
 	line-height: inherit;
-
-	.js-dynamic-type-on & {
-		/* stylelint-disable-next-line max-line-length */
-		/* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
-		font: -apple-system-short-footnote; /* 4 */
-		font-family: inherit; /* 5 */
-		font-weight: $lp-font-weight-bold; /* 5 */
-	}
 }
 
 .x-menu-link-chevron {
