--- a/client/my-sites/stats/style.scss
+++ b/client/my-sites/stats/style.scss
@@ -31,6 +31,19 @@
 	margin-left: 4px;
 }
 
+// Compensate for the fixed header.
+.is-section-stats .has-fixed-nav {
+	padding-top: 44px;
+
+	@media ( max-width: 782px ) {
+		padding-top: 65px;
+	}
+
+	@media ( max-width: 660px ) {
+		padding-top: 60px;
+	}
+}
+
 .stats-navigation__control {
 	margin-right: 16px;
 
