--- a/client/my-sites/checkout/checkout-thank-you/style.scss
+++ b/client/my-sites/checkout/checkout-thank-you/style.scss
@@ -743,23 +743,34 @@
 	}
 }
 
-.licensing-thank-you-manual-activation-instructions__step-number {
-	display: inline-flex;
-	justify-content: center;
-	align-items: center;
+.licensing-thank-you-manual-activation-instructions__list {
+	margin: 0;
 
-	margin-right: 12px;
+	list-style: none;
+	counter-reset: item;
+}
 
-	font-weight: bold;
-	text-align: center;
-	color: var(--color-text-inverted);
+.licensing-thank-you-manual-activation-instructions__list-item {
+	margin-bottom: 1.5rem;
 
-	background-color: var(--studio-jetpack-green-40);
+	&::before {
+		content: counter(item);
+		counter-increment: item;
 
-	border-radius: 24px; /* stylelint-disable-line scales/radii */
+		display: inline-flex;
+		justify-content: center;
+		align-items: center;
 
-	width: 28px;
-	height: 28px;
+		min-width: 1.75em;
+		height: 1.75em;
+		margin-inline-end: 0.75em;
+
+		background-color: var(--studio-jetpack-green-40);
+		border-radius: 50%; /* stylelint-disable-line declaration-property-unit-allowed-list */
+		color: var(--color-text-inverted);
+
+		font-weight: 700;
+	}
 }
 
 .licensing-activation .licensing-thank-you-manual-activation-instructions__button.button {
