Add license key clipboard in the activation instruction page.

--- a/client/my-sites/checkout/checkout-thank-you/style.scss
+++ b/client/my-sites/checkout/checkout-thank-you/style.scss
@@ -768,6 +768,10 @@
 	}
 }
 
+.jetpack-standalone-activation-instructions .jetpack-license-key-clipboard {
+	margin: 32px 0 57.5px;
+}
+
 .licensing-activation .jetpack-license-key-clipboard__button.button {
 	margin-top: 0;
 	min-width: 100px;
