--- a/client/my-sites/customer-home/cards/tasks/style.scss
+++ b/client/my-sites/customer-home/cards/tasks/style.scss
@@ -125,6 +125,14 @@
 		.task__skip {
 			color: var(--color-neutral-0);
 		}
+
+		.task__description a {
+			color: var(--color-neutral-0);
+			font-weight: bold;
+		}
+		.task__skip:hover {
+			color: var(--color-neutral-20);
+		}
 	}
 }
 
