rebase with trunk

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/launchpad/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/launchpad/style.scss
@@ -294,9 +294,9 @@
 	}
 }
 
-// completed tasks
-.launchpad__task.completed-and-inactive,
-.launchpad__task.completed-and-active {
+// completed tasks (both enabled and disabled)
+.launchpad__task.completed.disabled,
+.launchpad__task.completed.enabled {
 	.launchpad__checklist-item-text {
 		color: var(--studio-gray-50);
 		font-weight: 400;
@@ -309,11 +309,11 @@
 	}
 }
 
-// not-completed && completed-and-active tasks
-.launchpad__task.completed-and-active:hover,
-.launchpad__task.not-completed:hover,
-.launchpad__task.completed-and-active > a:focus,
-.launchpad__task.not-completed > a:focus {
+// pending tasks and completed enabled
+.launchpad__task.completed.enabled:hover,
+.launchpad__task.pending:hover,
+.launchpad__task.completed.enabled > a:focus,
+.launchpad__task.pending > a:focus {
 	.launchpad__checklist-item-text {
 		color: var(--studio-blue-50);
 	}
