Add alternate layout for licensing activation component

--- a/client/components/jetpack/licensing-activation/style.scss
+++ b/client/components/jetpack/licensing-activation/style.scss
@@ -134,13 +134,21 @@
 }
 
 .licensing-activation__card-footer-text {
+	color: var(--color-neutral-60);
+	font-size: rem(14px);
+	line-height: rem(21px);
+
+	> a {
+		color: var(--color-neutral-60);
+	}
+}
+
+:is(.licensing-activation__card-footer) .licensing-activation__card-footer-text {
 	position: absolute;
+	font-size: inherit;
+	line-height: inherit;
 	width: 100%;
 	text-align: center;
 	left: 0;
 	bottom: 7%;
-	color: var(--color-neutral-60);
-	> a {
-		color: var(--color-neutral-60);
-	}
 }
