--- a/client/components/jetpack/licensing-activation/style.scss
+++ b/client/components/jetpack/licensing-activation/style.scss
@@ -133,6 +133,12 @@
 	}
 }
 
+.is-alt-layout .licensing-activation__card-footer {
+	background-size: 85%;
+	background-repeat: no-repeat;
+	background-position: top right;
+}
+
 .licensing-activation__card-footer-text {
 	color: var(--color-neutral-60);
 	font-size: rem(14px);
