--- a/client/landing/stepper/declarative-flow/internals/steps-repository/intro/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/intro/styles.scss
@@ -4,44 +4,62 @@
 .intro {
 	&.newsletter {
 		background-color: rgb(162 218 254);
-		background-image:
-			url(calypso/assets/images/onboarding/newsletter-intro-left.png),
-			url(calypso/assets/images/onboarding/newsletter-intro-right.png);
-		background-repeat: no-repeat, no-repeat;
-		background-attachment: fixed;
-		/*!rtl:ignore*/
-		background-position-x: 0%, 100%;
-		background-position-y: 100%, 80px;
-		background-size: auto 30%, auto 50%;
 
+		.step-container {
+			&.is-using-new-intro-design {
+				background-image: url(calypso/assets/images/onboarding/newsletter-intro-bottom.png);
+				background-repeat: no-repeat;
+				background-attachment: fixed;
+				background-position: 0 100%;
+				background-size: 100% 55vw;
 
-		@include break-huge {
-			background-size: auto 55%, auto 80%;
-			background-position-y: 100%, 136px;
+				@include break-large {
+					background-size: 100% 55vh;
+				}
+			}
+
 			background-image:
-				url(calypso/assets/images/onboarding/newsletter-intro-left-desktop.png),
-				url(calypso/assets/images/onboarding/newsletter-intro-right-desktop.png);
+				url(calypso/assets/images/onboarding/newsletter-intro-left.png),
+				url(calypso/assets/images/onboarding/newsletter-intro-right.png);
+			background-repeat: no-repeat, no-repeat;
+			background-attachment: fixed;
+			/*!rtl:ignore*/
+			background-position-x: 0%, 100%;
+			background-position-y: 100%, 80px;
+			background-size: auto 30%, auto 50%;
+
+
+			@include break-huge {
+				background-size: auto 55%, auto 80%;
+				background-position-y: 100%, 136px;
+				background-image:
+					url(calypso/assets/images/onboarding/newsletter-intro-left-desktop.png),
+					url(calypso/assets/images/onboarding/newsletter-intro-right-desktop.png);
+			}
 		}
 	}
 
 	&.link-in-bio {
 		background-color: #d0cce3;
-		background-image:
-			url(calypso/assets/images/onboarding/link-in-bio-intro-left.png),
-			url(calypso/assets/images/onboarding/link-in-bio-intro-right.png);
-		background-position-y: 85%, 15%;
-		/*!rtl:ignore*/
-		background-position-x: 0, 100%;
-		background-repeat: no-repeat, no-repeat;
-		background-attachment: fixed;
-		background-size: auto 15%, auto 15%;
 
-		@include break-huge {
-			background-size: auto 25%, auto 25%;
-			background-position-y: 85%, 10%;
+		.step-container {
 			background-image:
-				url(calypso/assets/images/onboarding/link-in-bio-intro-left-desktop.png),
-				url(calypso/assets/images/onboarding/link-in-bio-intro-right-desktop.png);
+				url(calypso/assets/images/onboarding/link-in-bio-intro-left.png),
+				url(calypso/assets/images/onboarding/link-in-bio-intro-right.png);
+			background-position-y: 85%, 15%;
+			/*!rtl:ignore*/
+			background-position-x: 0, 100%;
+			background-repeat: no-repeat, no-repeat;
+			background-attachment: fixed;
+			background-size: auto 15%, auto 15%;
+
+			@include break-huge {
+				background-size: auto 25%, auto 25%;
+				background-position-y: 85%, 10%;
+				background-image:
+					url(calypso/assets/images/onboarding/link-in-bio-intro-left-desktop.png),
+					url(calypso/assets/images/onboarding/link-in-bio-intro-right-desktop.png);
+			}
 		}
 	}
 
@@ -99,13 +117,17 @@
 		transform: translateY(-50%);
 	}
 
+	.is-using-new-intro-design .intro__content {
+		top: 35%;
+		transform: none;
+	}
+
 	.intro__title {
 		@include onboarding-font-recoleta;
 
 		font-size: 1.75rem;
 		/* stylelint-disable-next-line declaration-property-unit-allowed-list */
 		line-height: 130%;
-		padding-bottom: 32px;
 
 		@include break-large {
 			font-size: 2.75rem;
@@ -119,6 +141,15 @@
 		span {
 			display: block;
 		}
+	}
+
+	.intro__title + .intro__description,
+	.intro__description + .intro__button {
+		margin-top: 24px;
+	}
+
+	.intro__title + .intro__button {
+		margin-top: 32px;
 	}
 
 	.intro__button {
