switch to a reusable checkmark icon

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/launchpad/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/launchpad/style.scss
@@ -52,6 +52,10 @@
 			font-size: 1rem;
 			cursor: pointer;
 		}
+
+		&-checkmark-icon {
+			fill: var(--studio-green-40);
+		}
 	}
 
 	&-close-button {
