--- a/client/my-sites/site-settings/style.scss
+++ b/client/my-sites/site-settings/style.scss
@@ -625,3 +625,40 @@ button.site-settings__general-settings-set-guessed-timezone.button.is-borderless
 	margin-top: -16px;
 	margin-bottom: 16px;
 }
+
+.site-settings__advanced-customization-notice {
+	display: flex;
+	flex-direction: column;
+	padding: 20px;
+	background-color: var(--color-neutral-0);
+	align-items: center;
+	justify-content: space-between;
+
+	.site-settings__advanced-customization-notice-cta {
+		display: flex;
+		align-items: center;
+	}
+
+	svg.gridicon.gridicons-info-outline {
+		color: var(--color-warning-30);
+		padding-right: 10px;
+	}
+
+	.site-settings__advanced-customization-notice-buttons {
+		display: flex;
+		padding-top: 10px;
+		min-width: 185px;
+
+		.button.is-primary {
+			margin-left: 5px;
+		}
+	}
+
+	@include break-xlarge {
+		flex-direction: row;
+
+		.site-settings__advanced-customization-notice-buttons {
+			padding-top: 0;
+		}
+	}
+}
