Fix bad margins around PromoCard version of domain non-owner warning

--- a/client/my-sites/email/email-non-domain-owner-message/style.scss
+++ b/client/my-sites/email/email-non-domain-owner-message/style.scss
@@ -1,4 +1,9 @@
-.email-non-domain-owner-message__non-owner-message {
+.email-non-domain-owner-message__promo-card {
+	margin-top: 16px;
+	padding-bottom: 0;
+}
+
+.email-non-domain-owner-message__text {
 	margin-top: 16px;
 	margin-bottom: 0;
 }
