--- a/client/landing/stepper/declarative-flow/internals/steps-repository/intro/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/intro/styles.scss
@@ -10,11 +10,16 @@
 				background-image: url(calypso/assets/images/onboarding/newsletter-intro-bottom.png);
 				background-repeat: no-repeat;
 				background-attachment: fixed;
-				background-position: 0 100%;
-				background-size: 100% 55vw;
+				background-position-x: center;
+				background-position-y: 100%;
+				background-size: cover;
 
-				@include break-large {
-					background-size: 100% 55vh;
+				@include onboarding-break-mobile-landscape {
+					background-position-y: 35vh;
+				}
+
+				@include break-huge {
+					background-position-y: 10vh;
 				}
 			}
 
@@ -118,8 +123,15 @@
 	}
 
 	.is-using-new-intro-design .intro__content {
-		top: 35%;
-		transform: none;
+		width: calc(100% - 40px);
+
+		top: 25%;
+		left: 50%;
+		transform: translateX(-50%);
+
+		@include break-medium {
+			top: 35%;
+		}
 	}
 
 	.intro__title {
