--- a/client/my-sites/site-settings/style.scss
+++ b/client/my-sites/site-settings/style.scss
@@ -662,3 +662,10 @@ button.site-settings__general-settings-set-guessed-timezone.button.is-borderless
 		}
 	}
 }
+
+.site-settings__gifting-container {
+	margin-bottom: 16px;
+	p {
+		font-style: italic;
+	}
+}
